# Open-Headstage

./: .gitignore  ARCHITECTURE.md  BUGS.md  CHANGELOG.md  CLAP Plugin Development Documentation.md  COMMIT_MSG.tmp  Cargo.toml  GEMINI.md  LICENSES.md  README.md  SBOM.md  TODO.md  architecture.md  build.rs  bundler.toml  trace  wrapper.h
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: rust_ci.yml
app/: .gitignore  Cargo.toml  LICENSES.md  TODO.md
app/github_issues/: core_infra_ffi_bindings_libmysofa.md
docs/research/: Benchmarking-nih-plug.md  CLAP Plugin Development Documentation.md  Diagnostic Protocol for CLAP on LINUX.md  Dynamic Head Tracking Audio Feasibility.md  EQ Implementation in Rust Research.md  Linux Binaural Speaker Simulation Research.md  Mastering egui: A Technical Guide to Advanced User Interface Development.md  Rust Import Error Deep Dive.md  Rust_lib.rs_main.rs_guide.md  context_engineering_research.md  file_dialog_research.md
dummy_plugin/: Cargo.toml
dummy_plugin/src/: lib.rs
github_issues/: convolution_implement_core_fft_convolution.md  convolution_unit_tests_convolution_engine.md  core_infra_basic_parameter_handling.md  headphone_eq_implement_autoeq_parsing.md  headphone_eq_implement_iir_parametric_eq.md  headphone_eq_unit_tests_peq_filters.md  integration_daw_testing_debugging.md  integration_integrate_modules_processing_chain.md  sofa_implement_hrir_resampling.md  sofa_implement_logic_select_extract_hrirs.md  sofa_load_sofa_parse_metadata.md  sofa_unit_tests_loading_extraction.md  ui_basic_ui_elements.md  ui_connect_parameters_generic_ui.md
src/: autoeq_parser.rs  lib.rs  main.rs  web_loader.rs
src/dsp/: convolution.rs  mod.rs  parametric_eq.rs
src/sofa/: loader.rs  mod.rs
src/ui/: mod.rs  speaker_visualizer.rs
temp_nih_example/: Cargo.toml
temp_nih_example/src/: lib.rs
xtask/: Cargo.toml
