[package]
name = "open-headstage"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.87"

[dependencies]
# VST3 support has been explicitly disabled to avoid the GPLv3 license of the VST3 SDK.
# We are focusing on CLAP as the primary plugin format, which uses the permissive MIT license.
# To re-enable VST3, you would need to add "vst3" to the features list below and accept
# that the entire project must be licensed under GPLv3.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["standalone"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", optional = true }
egui-file-dialog = { version = "0.10.0", optional = true }
dirs = "5.0.1"

parking_lot = { version = "0.12", features = ["serde"] }

rustfft = "6.4.0"
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5"
biquad = "0.4.1"
strum = "0.26"
strum_macros = "0.26"

[features]
default = ["ui"]
ui = ["nih_plug_egui", "egui-file-dialog"]

[build-dependencies]
bindgen = "0.70"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

# [[bench]]
# name = "process_block"
# harness = false
