[package]
name = "open-headstage"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.87"

[patch.'https://github.com/Rust-UI-Toolkit/baseview.git']
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "9a0b42c09d712777b2edb4c5e0cb6baf21e988f0" }

[dependencies]
# VST3 support has been explicitly disabled to avoid the GPLv3 license of the VST3 SDK.
# We are focusing on CLAP as the primary plugin format, which uses the permissive MIT license.
# To re-enable VST3, you would need to add "vst3" to the features list below and accept
# that the entire project must be licensed under GPLv3.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "ecfd6322c776d9f0373d31758976c2353c162737", default-features = false, features = ["standalone"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "ecfd6322c776d9f0373d31758976c2353c162737", optional = true }
egui-file-dialog = { version = "0.10.0", optional = true }
dirs = "5.0.1"

# Dependencies for manual standalone host
cpal = "0.15"
nih_log = "0.3.1"
log = "0.4"

parking_lot = { version = "0.12", features = ["serde"] }

rustfft = "6.4.0"
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
biquad = "0.4.1"
strum = "0.26"
strum_macros = "0.26"
num-complex = "0.4.5"

[features]
default = ["ui"]
ui = ["nih_plug_egui", "egui-file-dialog"]

[build-dependencies]
bindgen = "0.72.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

# [[bench]]
# name = "process_block"
# harness = false
