[package]
name = "dummy_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", tag = "spectral-compressor-0.4.3", features = ["standalone"] }
nih_plug_derive = { git = "https://github.com/robbert-vdh/nih-plug.git", tag = "spectral-compressor-0.4.3" }
